# what-to-eat

./: build-commits.txt  build-frontend.sh  build.sh  package.json  pnpm-lock.yaml
backend/: Cargo.toml  TODO.md  ardi.db  data.db  testdb.db
backend/src/: main.rs  testdb.db
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/pages/: _header.tsx  apicalls.ts  food_card.tsx  index.tsx
frontend/styles/: components.css  globals.css
pages/: _app.tsx  food_card.tsx  index.tsx
