[package]
name = "what-to-eat"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
indexmap = "1.9.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
actix-web = "4.2.1"
once_cell = "1.16.0"
json = "0.12.4"